--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@
 	padding: 5%;
 }
 
+#social div.networks a {
+	text-decoration: none;
+}
+
 #social div.form {
 	display: block;
 	float: right;
@@ -41,7 +45,8 @@
 #social .email {
 	color: #e9b9b5;
 	padding-left: 5%;
-	width: 80%;
+	margin-left: 5%;
+	width: 75%;
 	font-family: 'Oswald', sans-serif;
 	font-weight: bold;
 }
@@ -274,12 +279,58 @@
 	background-image: url('../images/facebook-red.png');
 }
 
+#events #load-more-events {
+	font-family: 'Oswald', sans-serif;
+	font-weight: bold;
+	color: #c83232;
+	text-decoration: none;
+	display: block;
+	width: 50%;
+	margin: 20px auto 5px;
+	background: linear-gradient(to bottom, #ccc , #fff); 
+	text-align: center;
+	padding: 6px 0;
+}
+
+#submitevent {
+	background-color: #e7e7e7;
+	background: linear-gradient(to bottom, #ccc , #e7e7e7); 
+	font-family: 'Georgia', serif;
+}
+
+#submiteventwrapper {
+	width: 90%;
+	margin: 0 auto 20px;
+}
+
+#submitevent h2 {
+	font-family: 'Oswald', sans-serif;
+	font-weight: bold;
+	color: #59070e;
+}
+
 #footer {
+	font-family: 'Oswald', sans-serif;
+	font-weight: normal;
+	font-size: 1.1em;
+	color: #fff;
 	padding: 20px 0;
+	background-image: url('../images/whisky-background.png');
+}
+
+#footer-navigation {
+	color: #bf8529;
+	margin-left: 5%;
+}
+
+#footer-navigation a {
+	color: #fff;
+	text-decoration: none;
 }
 
 #copyright {
 	float: right;
+	margin-right: 5%;
 }
 
 h3, h3 a, h3 a, h3 a:visited {
